# rig-rlm

./: .gitignore  AGENTICA_IDEAS.md  Cargo.toml  LAMBDA_RLM.md  README.md  agentgateway-a2a.yaml  agentgateway-mcp-multiplex.yaml  agentgateway-mcp.yaml  flake.nix  merge_sort.py  rlmagents_ideas.md.resolved  trainset.json
.github/workflows/: ci.yml
examples/: restate_deploy.sh  simple_task.rs  test_apply_patch.rs
scripts/: configure_restate.sh
src/: a2a_server.rs  agent_metric.rs  agent_module.rs  apply_patch.rs  cancellation.rs  exec.rs  exec_policy.rs  lib.rs  llm.rs  main.rs  mcp_server.rs  persistence.rs  pipeline.rs  repl.rs  restate_server.rs  safety.rs  sandbox.rs  session.rs  signature.rs
src/arc/: agent.rs  bench.rs  data.rs  mod.rs  prompt.rs  signature.rs
src/channels/: hub.rs  iggy_ws.rs  mod.rs  telegram.rs  topic.rs  topology.rs  webhook.rs  ws.rs
src/chunking/: ast.rs  mod.rs
src/gnn/: SchemaFinverse.tql
src/gnn/hehrgnn/: Cargo.toml  README.md  gepa_weights.json
src/gnn/hehrgnn/src/: lib.rs  main.rs  server_main.rs
src/gnn/hehrgnn/src/data/: batcher.rs  fact.rs  graph_builder.rs  graph_mutation.rs  hetero_graph.rs  mod.rs  negative_sampling.rs  neighbor_sampler.rs  synthetic.rs  vocab.rs
src/gnn/hehrgnn/src/eval/: agent_env.rs  bench.rs  code_sandbox.rs  critical_path.rs  embedding_policy.rs  environment.rs  evaluate.rs  explanation.rs  fiduciary.rs  fiduciary_env.rs  hierarchy.rs  learnable_scorer.rs  metrics.rs  mod.rs  planner.rs  probing.rs  queue_reactive_sim.rs  rl_policy.rs  rubric.rs  sae.rs  safety.rs  short_term_memory.rs  simulator.rs  transition_buffer.rs
src/gnn/hehrgnn/src/feedback/: collector.rs  mod.rs  retrainer.rs
src/gnn/hehrgnn/src/ingest/: document_node.rs  feature_engineer.rs  json_loader.rs  mod.rs  regime_weights.rs
src/gnn/hehrgnn/src/model/: attn_res_gnn.rs  backbone.rs  ema.rs  embedding.rs  energy.rs  ensemble_pipeline.rs  execution_head.rs  gat.rs  gnn_layer.rs  graph_masking.rs  graph_transformer.rs  graphsage.rs  hehrgnn.rs  jepa.rs  lora.rs  mhc.rs  mod.rs  probe.rs  rgcn.rs  stable_decorrelation.rs  temporal_selector.rs  trainer.rs  vicreg.rs  weights.rs
src/gnn/hehrgnn/src/model/msa/: interleave.rs  loss.rs  memory_bank.rs  mod.rs  pooling.rs  rope.rs  router.rs  scoring.rs  sparse_attn.rs
src/gnn/hehrgnn/src/model/pc/: bridge.rs  circuit.rs  distribution.rs  em.rs  fiduciary_pc.rs  mod.rs  node.rs  query.rs  structure.rs
src/gnn/hehrgnn/src/model/vision/: document_drope.rs  document_patch.rs  document_vit.rs  mod.rs
src/gnn/hehrgnn/src/optimizer/: gepa.rs  mod.rs  newton_schulz.rs
src/gnn/hehrgnn/src/past_runs/distmult_20260228_232414/: dashboard.html  metrics.jsonl  run_summary.json
src/gnn/hehrgnn/src/past_runs/distmult_20260228_233414/: dashboard.html  metrics.jsonl  run_summary.json
src/gnn/hehrgnn/src/server/: handlers.rs  mod.rs  state.rs
src/gnn/hehrgnn/src/tasks/: adaptive_retrain.rs  anomaly_scorer.rs  instant_propagation.rs  link_predictor.rs  mod.rs  node_classifier.rs  pql.rs
src/gnn/hehrgnn/src/training/: loss.rs  mod.rs  observe.rs  scoring.rs  train.rs
src/gnn/hehrgnn/tests/: all_features_test.rs  all_models_probe_test.rs  anomaly_realworld_test.rs  asymmetric_reward_ab_test.rs  category_prediction_test.rs  circuit_self_learning_test.rs  combo_features_test.rs  e2e_test.rs  ensemble_100k_test.rs  ensemble_anomaly_test.rs  ensemble_pipeline_test.rs  evolving_graph_simulation_test.rs  fiduciary_actions_test.rs  fiduciary_alignment_bench_test.rs  fiduciary_generalization_test.rs  fiduciary_model_comparison_test.rs  fiduciary_negative_test.rs  fiduciary_scenarios_test.rs  fiduciary_schema_validation_test.rs  gepa_optimizer_test.rs  gepa_prediction_test.rs  gepa_recall_optimizer_test.rs  gepa_training_test.rs  gnn_training_test.rs  hehrgnn_anomaly_test.rs  hehrgnn_jepa_test.rs  jepa_category_test.rs  jepa_integration_test.rs  jepa_test.rs  large_graph_pc_test.rs  large_scale_test.rs  learnable_scorer_test.rs  lora_test.rs  mhc_test.rs  multihop_test.rs  multihop_verbose_test.rs  negative_sampling_test.rs  pc_fiduciary_test.rs  per_model_sweep_test.rs  probe_reward_test.rs  (+17 more)
src/gnn/plans/: gnn.md  msa_qa_dataset.json
src/lambda/: adaptive_yoneda.rs  combinators.rs  effects.rs  executor.rs  gepa_rlm.rs  harness.rs  live_tests.rs  mod.rs  planner.rs  profunctor.rs  rubric.rs  templates.rs  yoneda.rs
src/monad/: action.rs  attachment.rs  capabilities.rs  context.rs  context_manager.rs  context_memory.rs  cost.rs  diff_tracker.rs  error.rs  evidence.rs  execution.rs  frozen.rs  generation.rs  history.rs  hitl_live_test.rs  hitl_resource_test.rs  hitl_tests.rs  hooks.rs  hyper_prompt.rs  integration_tests.rs  interaction.rs  live_llm_tests.rs  memory.rs  mod.rs  monad.rs  normalize.rs  orchestrator.rs  otel.rs  parallel.rs  project_doc.rs  prompts.rs  provider.rs  recipe.rs  restate.rs  restate_helpers.rs  tests.rs  tests_modules.rs  truncation.rs
src/monad/memories/: consolidation.rs  extraction.rs  mod.rs  storage.rs
src/nuggets/: advanced.rs  bench.rs  bench_turboquant.rs  core.rs  keyindex.rs  memory.rs  mod.rs  promote.rs  shelf.rs  stress_5k.rs  test_knowledge_graph.rs  test_temporal_e2e.rs  test_temporal_lattice.rs  turboquant.rs
src/sandbox/: mod.rs
src/templates/: system.md  user.md
src/templates/errors/: empty.md  execution.md  missing_code.md
src/templates/memories/: consolidation.md  extraction.md  read_path.md
tests/: restate_e2e.rs
