[package]
name = "rig-rlm"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
oneshot = { version = "0.1.13", default-features = false }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
dotenvy = "0.15"
indexmap = "2.9.0"

# LLM
rig-core = "0.30.0"
reqwest = "0.12.28"

# Execution
pyo3 = { version = "0.28.1", features = ["auto-initialize"] }

# Templates
tera = "1.20.1"

# Logging / Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# OpenTelemetry + LangFuse (versions aligned with opentelemetry-langfuse 0.6)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-langfuse = "0.6"

# DSRs (prompt optimization)
dspy-rs = "0.7.3"

# Persistence
turso = { version = "0.4.4", default-features = false }

# Sandbox
microsandbox = "0.1.2"

# Durable Execution
restate-sdk = "0.7"
similar = "2.7.0"
dirs = "6.0.0"

[[bin]]
name = "rig-rlm"
path = "src/main.rs"

[[bin]]
name = "restate-server"
path = "src/restate_server.rs"

[dev-dependencies]
tempfile = "3"
