[workspace]
members = [".", "src/gnn/hehrgnn"]
resolver = "3"

[package]
name = "rig-rlm"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core
oneshot = { version = "0.1.13", default-features = false }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simd-json = "0.14"
serde_yaml = "0.9.34"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
clap = { version = "4.5.58", features = ["derive"] }
anyhow = "1.0.101"
dotenvy = "0.15"
indexmap = "2.9.0"

# LLM
rig-core = "0.30.0"
reqwest = "0.12.28"

# Execution
pyo3 = { version = "0.28.1", features = ["auto-initialize"] }

# Templates
tera = "1.20.1"

# Logging / Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# OpenTelemetry + LangFuse (versions aligned with opentelemetry-langfuse 0.6)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-langfuse = "0.6"

# DSRs (prompt optimization)
dspy-rs = "0.7.3"

# Persistence
turso = { version = "0.4.4", default-features = false }

# Multimodal (PDF/image processing)
pdf-extract = "0.10"
base64 = "0.22"

# Sandbox
microsandbox = "0.1.2"

# Durable Execution
restate-sdk = "0.7"
rayon = "1.10"
similar = "2.7.0"
dirs = "6.0.0"
tokio-util = "0.7.18"

# MCP Server
rmcp = { version = "0.16", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }

# Sync deps
regex = "1.11"

# Channels
teloxide = { version = "0.17", features = ["macros"] }

# A2A Server (HTTP)
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"
hashbrown = "0.16.1"
corophage = "0.3.1"
frunk_core = "0.4.4"

[[bin]]
name = "rig-rlm"
path = "src/main.rs"

[[bin]]
name = "restate-server"
path = "src/restate_server.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "a2a-server"
path = "src/bin/a2a_server.rs"

[[bin]]
name = "ws-channel-demo"
path = "src/bin/ws_channel_demo.rs"

[[bin]]
name = "ws-agent-demo"
path = "src/bin/ws_agent_demo.rs"

[[bin]]
name = "ws-hub-demo"
path = "src/bin/ws_hub_demo.rs"

[[bin]]
name = "cross-channel-demo"
path = "src/bin/cross_channel_demo.rs"

[dev-dependencies]
tempfile = "3"
