[package]
name = "hehrgnn"
version = "0.1.0"
edition = "2024"
description = "Finverse GNN Platform: relational graph intelligence for finance, built on Burn"

[[bin]]
name = "hehrgnn"
path = "src/main.rs"

[[bin]]
name = "hehrgnn-server"
path = "src/server_main.rs"

[[bin]]
name = "msa_eval"
path = "src/bin/msa_eval.rs"

[[bin]]
name = "msa_trinity"
path = "src/bin/msa_trinity.rs"

[[bin]]
name = "rl_metrics"
path = "src/bin/rl_metrics.rs"

[[bin]]
name = "rl_evolution"
path = "src/bin/rl_evolution.rs"

[[bin]]
name = "gepa_rl_tuning"
path = "src/bin/gepa_rl_tuning.rs"

[[bin]]
name = "rl_proof"
path = "src/bin/rl_proof.rs"

[dependencies]
burn = { version = "0.20", features = ["wgpu", "autodiff", "train", "ndarray", "cpu"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = "0.4"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
attnres = "0.1"

[[bin]]
name = "attnres_bench"
path = "src/bin/attnres_bench.rs"

[[bin]]
name = "attnres_verify"
path = "src/bin/attnres_verify.rs"

[[bin]]
name = "attnres_train"
path = "src/bin/attnres_train.rs"
